; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_mmu.c_nonpaging_gva_to_gpa.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_mmu.c_nonpaging_gva_to_gpa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.x86_exception = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm_vcpu*, i32, i32, %struct.x86_exception*)* @nonpaging_gva_to_gpa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nonpaging_gva_to_gpa(%struct.kvm_vcpu* %0, i32 %1, i32 %2, %struct.x86_exception* %3) #0 {
  %5 = alloca %struct.kvm_vcpu*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.x86_exception*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.x86_exception* %3, %struct.x86_exception** %8, align 8
  %9 = load %struct.x86_exception*, %struct.x86_exception** %8, align 8
  %10 = icmp ne %struct.x86_exception* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %4
  %12 = load %struct.x86_exception*, %struct.x86_exception** %8, align 8
  %13 = getelementptr inbounds %struct.x86_exception, %struct.x86_exception* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  br label %14

14:                                               ; preds = %11, %4
  %15 = load i32, i32* %6, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
